@@ -1,3 +1,8 @@
+2010-10-14  Ulrich Mueller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-haskell-cabal):
+	Remove duplicate keywords.
+
 2010-08-24  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode): Set fill-column to 72.
